# google-health-cli

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Makefile  OAUTH_SETUP.md  README.md  RELEASING.md  SKILL.md  config.example.json  go.mod  go.sum  pyproject.toml
.claude/: CLAWHUB_STANDARDS.md  CLI_CONVENTIONS.md
.github/workflows/: ci.yml  deploy-clawhub-from-branch.yml  publish-clawhub.yml  release.yml
cardio/: __init__.py  cli.py  config.py  daily_log.py
cmd/google-health-cli/: main.go
google_health/: __init__.py  cli.py  config.py  health.py
internal/api/: client.go  client_test.go  datatypes.go  datatypes.json  datatypes_test.go  filter.go  filter_test.go  rollup.go  rollup_test.go  types.go
internal/auth/: oauth.go  tokencache.go  tokencache_test.go
internal/cli/: api.go  auth.go  client.go  commands_test.go  completion.go  config.go  data.go  dates.go  doctor.go  exit.go  output.go  privacy.go  rollup.go  rollup_test.go  root.go  sessions.go  sessions_test.go  skill_doc_test.go  source_guards_test.go  sync.go  sync_test.go  testdata_privacy_test.go  types.go  version.go
internal/config/: config.go  config_test.go
internal/dailylog/: dailylog.go  dailylog_test.go  ordered.go
internal/health/: filter.go  numbers.go  parse.go  parse_test.go  pyfloat.go
internal/version/: version.go
testdata/fixtures/: daily_log_input.json  exercise_all.json  steps_rollup.json
testdata/golden/: daily_log_output.golden  rollup_daily_steps.golden  sessions_json.golden  (+2 more)
tests/: test_offline.py
tools/: gen_golden.py
