[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardio-cli"
version = "0.1.0"
description = "Log elliptical Zone 2 cardio from Google Health (ghealth) into DAILY_LOG.json"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cardio-cli = "cardio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cardio"]
