[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-health-cli"
version = "0.1.0"
description = "Sync Google Health data (elliptical cardio, avg HR) into DAILY_LOG.json"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
google-health-cli = "google_health.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["google_health"]
